refresh button, bug squashing

--- a/public/styles.css
+++ b/public/styles.css
@@ -16,11 +16,11 @@ body{
 h1 {
   
 font-family: "Hoefler Text", "Baskerville Old Face", Garamond, "Times New Roman", serif;
-font-size: 68px;
+font-size: 108px;
 letter-spacing: 4px;
 word-spacing: 0.2px;
 color: #2C2C2C;
-font-weight: 700;
+font-weight: 600;
 text-decoration: none;
 font-style: normal;
 font-variant: normal;
@@ -142,7 +142,7 @@ a:visited {
 
 .delete-container-x {
   z-index: 4;
-  justify-content: space-between;
+  justify-content: space-evenly;
   display: flex;
   flex-direction: row;
   /* width: -webkit-fill-available; */
@@ -150,19 +150,19 @@ a:visited {
 }
 
 .delete-container-y {
+  background-color: white;
   border: 3px solid #F1F4F6;
   border-radius: 12px;
   padding: 5px 30px;
   color: rgb(160, 160, 160);
   position: absolute;
-  bottom: 3%;
+  bottom: 8%;
   left: 50%;
   transform: translateX(-50%);
   z-index: 4;
   justify-content: space-evenly;
   display: flex;
   flex-direction: column;
-  background-color: #fdfcfd;
   border-radius: 12px;
   transition: 0.2s;
 }
@@ -179,7 +179,7 @@ a:visited {
   /* border: 3px solid #F1F4F6; */
   border-radius: 12px;
   color: rgb(255 255 255);
-  font-size: x-large;
+  font-size: xx-large;
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 10px 0px;
 }
@@ -193,7 +193,7 @@ a:visited {
   background-color: #3e85dd;
   border-radius: 12px;
   color: white;
-  font-size: x-large;
+  font-size: xx-large;
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 10px 0px;
 }
@@ -223,7 +223,7 @@ a:visited {
   font-size: 45px;
   letter-spacing: 0.1vw;
   text-transform: capitalize;
-  min-width: 80%;
+  width: 80%;
   min-height: 13%;
   display: flex;
   margin: auto;
@@ -270,6 +270,23 @@ a:visited {
   border-radius: 9px;
 }
 
+.refresh-btn {
+  position: absolute;
+  top: 5%;
+  right: 6%;
+  height: 45px;
+  width: 45px;
+  background: url(refreshimg.png) center
+  no-repeat;
+  background-size: contain;
+  transition: 0s;
+}
+
+.refresh-btn-rotate {
+  transition: 1s;
+  transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+}
 
 .start-btn {
   position: relative;
@@ -283,13 +300,14 @@ a:visited {
   font-size: 90px;
   letter-spacing: 0.1vw;
   text-transform: capitalize;
-  min-width: 80%;
+  width: 80%;
   min-height: 13%;
   margin: auto;
   display: flex;
   justify-content: center;
   margin-bottom: 4%;
   align-items: center;
+  -webkit-tap-highlight-color: rgb(161, 161, 255);
 }
 
 
@@ -316,10 +334,10 @@ a:visited {
   width: 80%;
   justify-content: space-between;
   display: flex;
-  height: 8%;
   transition: 0.5s;
   margin: auto;
   margin-bottom: 3%;
+  min-height: 8%;
 }
 
 .tab-btn-container-hidden {
@@ -407,7 +425,7 @@ a:visited {
   z-index: 4;
   color: white;
   font-size: xx-large;
-  border-radius: 12px;
+  border-radius: 24px;
   padding: 1px 80px;
   background-color: #f59c6b;
   letter-spacing: 5px;
@@ -472,8 +490,8 @@ a:visited {
   text-align: left;
   /* margin-right: 5vw; */
   margin-left: 5vw;
-  margin-top: 2vh;
-  margin-bottom: 2vh;
+  margin-top: 9%;
+  margin-bottom: 9%;
   padding: 2vw;
   width: 55vw;
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
